--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lg-fullscreen": "^1.2.1",
+    "lg-thumbnail": "^1.2.1",
+    "lg-video": "^1.4.0",
+    "lightgallery": "^2.9.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
